js/js.translator/testData/incremental/invalidation/fastPath2/main/m.kt
fun box() = if (qux() == 42) "OK" else "Fail"
